add links extras

--- a/index.html
+++ b/index.html
@@ -5,32 +5,34 @@
     <meta http-equiv="X-UA_Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevLinks</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./assets/avatar.png" alt="Foto de Davy Shebarro, usando um fone e blusa preta, barba e fundo bege.">
+        <img
+          src="./assets/avatar.png"
+          alt="Foto de Davy Shebarro, usando um fone e blusa preta, barba e fundo bege."
+        />
         <p><b>DAVY SHEBARRO</b></p>
       </div>
       <div id="switch" onclick="tooggleMode()">
-        <button>
-        </button>
+        <button></button>
         <span></span>
       </div>
-      
+
       <ul>
         <li>
           <a href="#">Veja meu Portifólio</a>
         </li>
         <li>
-          <a href="#">Saiba Mais</a>
+          <a href="#">Sobre mim</a>
         </li>
         <li>
-          <a href="#">Baixar meu Ebook</a>
+          <a href="#">Certificados</a>
         </li>
         <li>
-          <a href="#">Minhas Certificações</a>
+          <a href="#"> <strong>MOVCHECK</strong></a>
         </li>
       </ul>
       <div id="social-links">
@@ -47,15 +49,17 @@
         <a href="https://www.linkedin.com/in/davy-shebarro-1075181b2/">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
-
       </div>
-      <footer>
-        Feito por <a href="https://vsco.co/shebsd/gallery">Davy Shebarro</a>
-      </footer>
+      <footer>Feito por <a href="https://vsco.co/shebsd/gallery">DS</a></footer>
     </div>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <script src="./script.js"></script>
   </body>
-  
 </html>
