add imagem perfil

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div id="container">
       <div id="profile">
         <img
-          src="./assets/avatar.png"
+          src="./assets/avatar-light.png"
           alt="Foto de Davy Shebarro, usando um fone e blusa preta, barba e fundo bege."
         />
-        <p><b>DAVY SHEBARRO</b></p>
+        <p><b>@davy shebarro</b></p>
       </div>
       <div id="switch" onclick="tooggleMode()">
         <button></button>
