--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a href="#">Veja meu Portifólio</a>
         </li>
         <li>
-          <a href="#">Sobre mim</a>
+          <a href="./about_me.html">Sobre mim</a>
         </li>
         <li>
           <a href="#">Certificados</a>
